deploy/paperless-ngx/rke2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archiveweaver
  labels:
    app.kubernetes.io/part-of: paperless-ngx
