deploy/paperless-ngx/rke2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-ngx
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
